[gd_scene load_steps=7 format=3 uid="uid://bnahtu175563b"]

[ext_resource type="FontFile" uid="uid://dqasb43stwv4q" path="res://Asset/Fonts/Sour_Gummy/static/SourGummy-Medium.ttf" id="2_wpj4y"]
[ext_resource type="Script" uid="uid://evw4tetjfx6x" path="res://CoreSystem/Setting/fps.gd" id="2_wwhnr"]
[ext_resource type="Script" uid="uid://banft42o2ysnf" path="res://CoreSystem/Setting/setting.gd" id="3_wwhnr"]
[ext_resource type="Script" uid="uid://khvl61kd2fon" path="res://Asset/Class/TweenPanel.gd" id="4_jea5u"]

[sub_resource type="Theme" id="Theme_3egey"]
Button/font_sizes/font_size = 30
Button/fonts/font = ExtResource("2_wpj4y")
Label/fonts/font = ExtResource("2_wpj4y")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_en8hn"]
bg_color = Color(0.154876, 0.154876, 0.154876, 1)

[node name="Setting" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 18

[node name="FPS" type="RichTextLabel" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
bbcode_enabled = true
text = "HI"
script = ExtResource("2_wwhnr")

[node name="Setting" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_3egey")
script = ExtResource("3_wwhnr")

[node name="Panel" type="Panel" parent="CanvasLayer/Setting"]
unique_name_in_owner = true
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_en8hn")
script = ExtResource("4_jea5u")
metadata/_custom_type_script = "uid://khvl61kd2fon"

[node name="Label" type="Label" parent="CanvasLayer/Setting/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -321.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "Setting"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Setting/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 104.0
offset_top = 112.0
offset_right = -104.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2

[node name="BGM" type="HBoxContainer" parent="CanvasLayer/Setting/Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Setting/Panel/VBoxContainer/BGM"]
layout_mode = 2
text = "Bgm"

[node name="BGMSlider" type="HSlider" parent="CanvasLayer/Setting/Panel/VBoxContainer/BGM"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 1.0
step = 0.05
scrollable = false

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Setting/Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Setting/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "effect"

[node name="EffectSlider" type="HSlider" parent="CanvasLayer/Setting/Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="TitleButton" type="Button" parent="CanvasLayer/Setting/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "Back to Title"

[node name="ExitButton" type="Button" parent="CanvasLayer/Setting/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
text = "close"

[node name="ClearButton" type="Button" parent="CanvasLayer/Setting/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Clear Data"

[node name="SettingButton" type="Button" parent="CanvasLayer/Setting"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1586.0
offset_top = 13.0
offset_right = -16.0
offset_bottom = -896.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "setting"

[connection signal="button_down" from="CanvasLayer/Setting/Panel/VBoxContainer/TitleButton" to="CanvasLayer/Setting" method="_on_title_button_button_down"]
[connection signal="pressed" from="CanvasLayer/Setting/Panel/VBoxContainer/ExitButton" to="CanvasLayer/Setting" method="_on_exit_button_pressed"]
[connection signal="button_down" from="CanvasLayer/Setting/Panel/VBoxContainer/ClearButton" to="CanvasLayer/Setting" method="_on_clear_button_button_down"]
[connection signal="pressed" from="CanvasLayer/Setting/SettingButton" to="CanvasLayer/Setting" method="_on_setting_button_pressed"]
